--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -17,11 +17,11 @@
 
   <FrameLayout
       android:id="@+id/frame_container"
-      android:layout_width="379dp"
-      android:layout_height="525dp"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       android:layout_below="@id/toolbar"
       android:layout_marginStart="8dp"
-      android:layout_marginTop="8dp"
+      android:layout_marginTop="60dp"
       android:layout_marginEnd="8dp"
       android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
